--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: argo-cd-demo-app
+  name: argo-cd-demo-svc
 spec:
   selector:
-    app: argo-cd-demo-app
+    app: argo-cd-demo
   ports:
     - port: 9000
       targetPort: 9000
