fix namespace kustomization

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - deployment.yaml
   - service.yaml
 
-namespace: argo-cd-demo-app
+namespace: gus-demo
 
 images:
   - name: argo-cd-demo-app
